--- a/sites/all/themes/naht/css/style.css
+++ b/sites/all/themes/naht/css/style.css
@@ -277,6 +277,14 @@ button#edit-submit-hidden {
     -ms-flex-pack: end!important;
     justify-content: flex-end!important;
 }
+
+@media (min-width: 768px){
+.order-md-last {
+    -webkit-box-ordinal-group: 14;
+    -ms-flex-order: 13;
+    order: 13;
+}
+}
 .h-100 {
     height: 100%!important
 }
@@ -291,6 +299,12 @@ button#edit-submit-hidden {
 
 .mh-100 {
     max-height: 100%!important
+}
+.mt-2,.my-2 {
+    margin-top: 2rem!important
+}
+.mt-5,.my-5 {
+    margin-top:50px!important
 }
 @media (min-width: 768px){
     .hidden-sm-up{
@@ -310,6 +324,12 @@ button#edit-submit-hidden {
 }
 .mb-4, .my-4 {
     margin-bottom: 1.5rem!important;
+}
+.mb-5, .my-5 {
+    margin-bottom: 2rem!important;
+}
+.mb-6, .my-6 {
+    margin-bottom: 4rem!important;
 }
 .pl-4, .px-4 {
     padding-left: 1.5rem!important;
@@ -601,5 +621,41 @@ ul.navbar-nav > li.open > a:focus{
     .region-post-hero .block:nth-child(4n+4){
         background-color: var(--primary-light)!important;
     }
-    
+}
+
+
+.block-list-icon-image .img{
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    width: 100%;
+}
+.block-list-icon-image .services-2 .icon {
+    line-height: 1;
+    position: relative;
+    width: 80px;
+    height: 80px;
+    background: var(--primary-light);
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    border-radius: 50%;
+    flex: 0 0 auto;
+    margin-right: 2rem;
+}
+.block-list-icon-image .services-2 .icon span {
+    font-size: 30px;
+    color: var(--clean-text);
+}
+.block-list-icon-image .services-2 .text h3 {
+    font-size: 20px;
+    font-weight: 500;
+    color: var(--black);
+}
+.wrap-about.ftco-animated{
+    padding: 50px 25px 50px 15px;
+}
+.wrap-about h2 {
+    font-weight: 500;
+    color: var(--black);
 }
