--- a/sites/all/themes/naht/css/style.css
+++ b/sites/all/themes/naht/css/style.css
@@ -21,6 +21,7 @@ black transparent: rgba(0,0,0,.5)
   --black-light: #666666;
   --gradient-start: #0d1128;
   --gradient-end: rgba(var(--primary-light-rgb), 0.1);
+  --gradient-end-dark: rgba(var(--primary-light-rgb), 0.6);
   --black-dark: var(--gradient-start);
   --clean-text: white;
   --clean-text-light: rgba(255,255,255, 0.8);
@@ -48,6 +49,21 @@ body {
     background: -ms-linear-gradient(var(--gradient-degree), var(--gradient-start) 0%, var(--gradient-end) 100%);
     background: linear-gradient(var(--gradient-degree), var(--gradient-start) 0%, var(--gradient-end) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr=var(--gradient-start), endColorstr=var(--gradient-end), GradientType=1 );
+    opacity: .9; 
+}
+.primary-gradient-overlay-dark{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: -moz-linear-gradient(var(--gradient-degree), var(--gradient-start) 0%, var(--gradient-end-dark) 100%);
+    background: -webkit-gradient(left bottom, right top, color-stop(0%, var(--gradient-start)), color-stop(100%, var(--gradient-end-dark)));
+    background: -webkit-linear-gradient(var(--gradient-degree), var(--gradient-start) 0%, var(--gradient-end-dark) 100%);
+    background: -o-linear-gradient(var(--gradient-degree), var(--gradient-start) 0%, var(--gradient-end-dark) 100%);
+    background: -ms-linear-gradient(var(--gradient-degree), var(--gradient-start) 0%, var(--gradient-end-dark) 100%);
+    background: linear-gradient(var(--gradient-degree), var(--gradient-start) 0%, var(--gradient-end-dark) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr=var(--gradient-start), endColorstr=var(--gradient-end-dark), GradientType=1 );
     opacity: .9; 
 }
 
@@ -218,6 +234,12 @@ button#edit-submit-hidden {
 .text-secondary{
     color: var(--secondary);
 }
+.text-primary{
+    color: var(--primary);
+}
+.text-clean{
+    color: var(--clean-text);
+}
 
 
 /**********************************/
@@ -228,6 +250,7 @@ button#edit-submit-hidden {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    
 }
 @media (min-width: 767.9px){
     .d-flex-sm-up {
@@ -315,7 +338,14 @@ button#edit-submit-hidden {
         display: none;
     }    
 }
-
+.img-absolute{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+}
 
 /***************************************/
 /****** Paddings/ Spaces  **************/
@@ -349,6 +379,16 @@ button#edit-submit-hidden {
 }
 .mt-3, .my-3 {
     margin-top: 1rem!important;
+}
+.pl-lg-5,.px-lg-5 {
+    padding-left: 5rem!important
+}
+.section-margin{
+    padding-bottom: 110px!important;
+    padding-top: 110px!important;
+}
+section, article, div{
+    position: relative;
 }
 
 /**********************************/
@@ -681,6 +721,32 @@ ul.navbar-nav > li.open > a:focus{
 }
 .top-page .alert button.close{
     opacity: 1;
+}
+
+/****************************************************/
+/*************** Overflow container *****************/
+/****************************************************/
+.section-wrapper-overflow{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100%;
+    width: calc(100vw - 9px);
+    left: 50%;
+    right: 50%;
+    margin-left: -50vw;
+    margin-right: -50vw;
+}
+
+
+.heading-section.heading-section-white h2 {
+    font-size: 40px;
+    color: var(--clean-text)
+}
+
+.heading-section.heading-section-white p {
+    color: var(--clean-text-light)
 }
 
 
