--- a/sites/all/themes/naht/css/style.css
+++ b/sites/all/themes/naht/css/style.css
@@ -237,8 +237,15 @@ button#edit-submit-hidden {
 .text-primary{
     color: var(--primary);
 }
+.text-black{
+    color: var(--black);
+}
 .text-clean{
     color: var(--clean-text);
+}
+.heading-section h2 {
+    font-size: 44px;
+    font-weight: 600;
 }
 
 
@@ -353,6 +360,16 @@ button#edit-submit-hidden {
 .pb-md-4,.px-md-4 {
     padding-bottom: 1.5rem!important;
 }
+.mr-2, .mx-2 {
+    margin-right: .5rem!important;
+}
+p {
+    margin-top: 0;
+    margin-bottom: 16px;
+}
+.pt-4,.py-4 {
+    padding-top: 24px!important;
+}
 .pt-md-4,.py-md-4 {
     padding-top: 1.5rem!important;
 }
@@ -364,6 +381,9 @@ button#edit-submit-hidden {
 }
 .mb-6, .my-6 {
     margin-bottom: 4rem!important;
+}
+.mb-7, .my-7 {
+    margin-bottom: 6rem!important;
 }
 .pl-4, .px-4 {
     padding-left: 1.5rem!important;
@@ -637,6 +657,35 @@ ul.navbar-nav > li.open > a:focus{
 /**********************************/
 
 
+/**********************************/
+/*********** Courses **************/
+/**********************************/
+.course {
+    margin-bottom: 30px;
+}
+.course .text p.meta i {
+    color: var(--secondary);
+}
+.course .text p.meta span {
+    width: 100%;
+}
+.course .text p.meta {
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 600;
+}
+.course .img {
+    width: 100%;
+    height: 300px;
+    background-size: cover;
+    background-position: center;
+}
+
+/**********************************/
+/*********** Post hero*************/
+/**********************************/
+
 .region-post-hero{
     display: flex;
     flex-wrap: wrap;
@@ -749,8 +798,64 @@ ul.navbar-nav > li.open > a:focus{
     color: var(--clean-text-light)
 }
 
+/****************************************************/
+/*************** Contact form ***********************/
+/****************************************************/
 
-
+#contact-form {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    color: var(--clean-text);
+  }
+  #contact-form .field-name-body{
+      padding-bottom: 50px;
+  }
+  #contact-form h1 > a,
+  #contact-form h2 > a,
+  #contact-form h3 > a{
+      color: var(--clean-text);
+      pointer-events: none;
+  }
+  #contact-form form > div {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  #contact-form form > div .form-group label{
+     display: inline-block;
+    max-width: 100%;
+    margin-bottom: 0;
+    font-weight: 100;
+    opacity: 0.6;
+    padding-bottom: 0;
+  }
+  #contact-form form > div .grippie{
+      display: none;
+  }
+  #contact-form form > div input.form-control,
+  #contact-form form > div textarea.form-control{
+    border: transparent!important;
+    border-bottom: 1px solid rgba(255,255,255,.2)!important;
+    height: 58px!important;
+    padding-left: 0;
+    padding-right: 0;
+    background: 0 0!important;
+    color: rgba(255,255,255,.9)!important;
+    font-size: 16px;
+    border-radius: 0;
+    -webkit-box-shadow: none!important;
+    box-shadow: none!important;
+  }
+  #contact-form form > div .form-group:not(:nth-last-child(1)) {
+    width: 50%;
+    padding-right: 15px;
+  }
+  #contact-form form > div .form-group:last-child {
+    display: flex;
+    align-items: flex-end;
+    margin-bottom: 16px;
+  }
+  
 
 
 
