--- a/sites/all/themes/naht/css/style.css
+++ b/sites/all/themes/naht/css/style.css
@@ -236,6 +236,9 @@ button#edit-submit-hidden {
         margin-bottom: 1rem;
     }    
 }
+.field-name-body{
+    padding-bottom: 0;
+}
 
 /**********************************/
 /************** Text **************/
@@ -363,6 +366,11 @@ button#edit-submit-hidden {
 .pt-5,.py-5 {
     padding-top:50px!important
 }
+.py-6 {
+    padding-top:70px!important;
+    padding-bottom:70px!important;
+}
+
 @media (min-width: 768px){
     .hidden-sm-up{
         display: none;
@@ -396,6 +404,9 @@ p {
 .pt-4,.py-4 {
     padding-top: 24px!important;
 }
+.pb-4 {
+    padding-bottom: 24px!important;
+}
 .pt-md-4,.py-md-4 {
     padding-top: 1.5rem!important;
 }
@@ -407,6 +418,11 @@ p {
 }
 .mb-6, .my-6 {
     margin-bottom: 4rem!important;
+}
+@media (max-width: 768px){
+    .mb-6-sm, .my-6-sm {
+        margin-bottom: 4rem!important;
+    }
 }
 .mb-7, .my-7 {
     margin-bottom: 6rem!important;
@@ -420,6 +436,12 @@ p {
 .pr-4, .px-4 {
     padding-right: 1.5rem!important;
 }
+@media (min-width: 767.9px){
+    .pr-6-md, .px-6-md {
+        padding-right: 2.5rem!important;
+    }
+}
+
 .pb-3, .py-3 {
     padding-bottom: 1rem!important;
 }
@@ -432,6 +454,12 @@ p {
 .pl-lg-5,.px-lg-5 {
     padding-left: 5rem!important
 }
+@media (min-width: 1024px){
+    .pl-5-lg,.px-5-lg {
+        padding-left: 5rem!important
+    }
+}
+
 .section-margin{
     padding-bottom: 110px!important;
     padding-top: 110px!important;
@@ -838,12 +866,23 @@ ul.navbar-nav > li.open > a:focus{
 @media (min-width: 768px){
     .block-contact-form {
         background-attachment: fixed;
+        padding-top: 7rem;
+        padding-bottom: 7rem;
+    }
+    .block-contact-form .form-wrapper{
+        padding-right: 5rem;
+        padding-top: 7rem;
     }
 }
 @media (max-width: 768px){
     .block-contact-form {
         background-position: center!important;
         background-size: cover;
+        padding-top: 5rem;
+        padding-bottom: 5rem;
+    }    
+    .block-contact-form .form-wrapper{
+        padding-bottom: 4rem;
     }
 }
 .block-contact-form.invert{
@@ -997,7 +1036,9 @@ ul.navbar-nav > li.open > a:focus{
 .main-hero-figure > img{
     object-fit: cover;
     position: absolute;
-    width: 100%;
+    width: auto;
+    height: 130%;
+    min-width: 100%;
 }
 .main-hero-content {
     min-height: 300px;
@@ -1013,10 +1054,182 @@ ul.navbar-nav > li.open > a:focus{
     border: none;
     margin: 0;
 }
+.node-type-certification .navbar,
+.node-type-webform .navbar,
 .node-type-page .navbar{
     margin-bottom: 0;
 }
 
+/************************************/
+/********** hidden styles ***********/
+/************************************/
 
+@media (max-width: 767px) {
+    .hidden-xs {
+      display: none !important;
+    }
+  }
+  @media (min-width: 768px) and (max-width: 991px) {
+    .hidden-sm {
+      display: none !important;
+    }
+  }
+  @media (min-width: 992px) and (max-width: 1199px) {
+    .hidden-md {
+      display: none !important;
+    }
+  }
+  @media (min-width: 1200px) {
+    .hidden-lg {
+      display: none !important;
+    }
+  }
 
+  /**************************/
+  /*** Our certifications ***/
+  /**************************/
+
+  .ftco-section .text{
+      flex: 1 1 auto;
+  }
+  .ftco-section .course .img{
+    border-radius: 5px;
+    height: 185px;
+    box-shadow: inset 0 0 5px 0px rgba(0, 0, 0, 0.2);
+  }
+
+  /**************************/
+  /****  About us page  ****/
+  /**************************/
+
+  .page-node-1 .field-name-body{
+      padding-bottom: 0;
+  }
+
+  /***********************************/
+  /**** certification blocks *********/
+  /***********************************/
+  
+  .view-id-products_block_certification_pages .views-field-title {
+    flex-basis: 100%;
+  }
+  .view-id-products_block_certification_pages .views-field-addtocartlink {
+    flex: 1 1 100%;
+  }
+  .view-id-products_block_certification_pages .views-field-sell-price{
+    flex: 1 1 100%;
+  }
+
+  .view-id-products_block_certification_pages .node-add-to-cart{
+    font-family: inherit !important;
+    margin-top: 1rem;
+    background-color: var(--secondary);    
+  }
+  .view-id-products_block_certification_pages .node-add-to-cart:hover{
+    color: var(--primary);
+    border-color: var(--primary);
+    background-color: transparent;
+  }
+  .view-products-block-certification-pages .views-row {
+    border: 1px solid var(--black-light);
+
+    box-shadow: 0 0 5px 4px rgba(0, 0, 0, 0.2);
+}
+.certification-store{
+    border-top: none;
+}
+.region-sidebar-second .block:first-child h2.block-title{
+    text-align: right;
+}
+.view-products-block-certification-pages .views-row {
+    padding: 25px 15px;
+}
+.node-type-certification .main-container{
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+.node-type-certification .panel-default{
+    border-color: var(--primary);
+}
+.node-type-certification .panel-default > .panel-heading{
+    padding: 20px 15px;
+    background-color: var(--primary);
+    color: var(--clean-text);
+}
+.node-type-certification .panel-default .panel-title{
+    display:inline-block;
+}
+.node-type-certification .panel-default > .panel-heading:before{
+    content: "\002b";
+    position: relative;
+    top: 1px;
+    margin-right: 10px;
+    display: inline-block;
+    font-family: 'Glyphicons Halflings';
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+/********************************************************/
+/*****************  Region footer   *********************/
+/********************************************************/
+.region-footer .block-title{
+    margin-bottom: 40px;
+}
+#footer a:hover{
+    color: var(--secondary);
+    opacity: 0.8;
+}
+footer.footer{
+    background: rgb(17,26,38);
+    background: linear-gradient(0deg, rgba(17,26,38,1) 0%, rgba(1,51,90,1) 45%);
+}
+footer.footer .totop > a{
+    text-decoration: none;
+    color: var(--primary)!important;
+    font-weight: bold;
+    width: 60px;
+    height: 60px;
+    background: var(--secondary);
+    border-radius: 50%;
+    position: absolute;
+    right: 0;
+    text-align: center;
+    opacity: 0.8;
+    transition: all 0.5s cubic-bezier(0.6, -0.28, 0.735, 0.045);
+}
+footer.footer .totop > a:hover{
+    opacity: 1;
+    transition: all 0.3s cubic-bezier(0.6, -0.28, 0.735, 0.045);
+    transform: scale(1.1);
+}
+@media (max-width: 1024.98px){
+    footer.footer .totop > a{
+        top: -130px;
+    }
+}
+@media (min-width: 1025px){
+    footer.footer .totop > a{
+        top: -60px;
+    }
+}
+#pre-footer {
+    padding: 80px 0 !important;
+    background-color: var(--bg-light-primary);
+    display: none;
+}
+
+.pre-footer-item img {
+    filter: grayscale(1);
+    height: 80px;
+    transition: filter 1s;
+}
+.pre-footer-item a:hover img{
+    filter: none;
+    transition: filter 0.6s;
+}
+  
 
